# KEA_System_Integration

./: .gitignore
01._Introduction/: .gitignore  paymentiframe.html
02._Text_Based_Data_Formats/text_based_data/: me.csv  me.json  me.txt  me.xml  me.yaml
03._Modules/html_classic/: index.html  myModule.js
03._Modules/html_esmodules/: index.html  index.js  myModule.js
03._Modules/node_commonjs/: myModule.js
03._Modules/node_esmodules/: index.js
03._Modules/python_mian/: library_importer.py  potential_library.py
03._Modules/python_modules/: main.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: main.py
05._Python_Virtual_Environment/02._poetry/: pyproject.toml
06._Simple_Servers/01._node/: app.js
06._Simple_Servers/02._python/: main.py  pyproject.toml
06._Simple_Servers/03._test/: app.js
06._Simple_Servers/04._test2/: app.js  package-lock.json  package.json
08._Server-Server/01._node/: app.js
08._Server-Server/02._python/: main.py  pyproject.toml
09._Environment_Variables/01._node/: index.js
09._Environment_Variables/02._python/: main.py  pyproject.toml
10._Date/01._node/: index.js
10._Date/02._python/: main.py
11._Short_Polling/01._node/: app.js
12._Long_Polling/01._node/: app.js
13._Server-Sent_Events/01._node/: app.js
14._WebSocket/01._node/: client.js  package.json
14._WebSocket/02._python_plain/: pyproject.toml  server.py
14._WebSocket/03._python_fastapi/: connection_manager.py  main.py  pyproject.toml
15._OpenAPI/01._node/: app.js
15._OpenAPI/02._python/: main.py  pyproject.toml
15._OpenAPI/02._python/routers/: spacecrafts_router.py
18._CORS/: index.html
18._CORS/01._node/: app.js
18._CORS/02._python/: main.py  pyproject.toml
19._Multipart_Forms/: index.html
19._Multipart_Forms/01._node/: app.js
19._Multipart_Forms/02._python/: main.py  pyproject.toml
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js  package.json
22._MPEG-DASH/public/: index.html
23._Embedded_Youtube/: embeddedyoutube.html
25._Github_Webhooks/01._node/: app.js
25._Github_Webhooks/02._python/: pyproject.toml
Assignments/01._Mandatory_1/: README.md
Assignments/01._Mandatory_1/03a._Data_Parsing_Server/02._Program_2/: main.py  pyproject.toml
(+73 files in other folders)
