[project]
name = "02-python"
version = "0.0.1"
description = "env task in class"
authors = [
    {name = "Lasse Rugaard Rasmussen",email = "lass531n@stud.kea.dk"}
]
license = {text = "KEA"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "02"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
