[tool.poetry]
name = "02-python"
version = "0.1.0"
description = ""
authors = ["lasse rugaard rasmussen <lass531n@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "02"}]

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.34.0"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
