[tool.poetry]
name = "02-program-2"
version = "0.1.0"
description = ""
authors = ["lasse rugaard rasmussen <lass531n@stud.kea.dk>"]
readme = "README.md"
packages = [{include = "02"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
